# nexus_engine

./: .gitignore  README.md  START_SERVER.md  test_server.sh
elixir_backend/: mix.exs
elixir_backend/_build/dev/lib/castore/.mix/: compile.elixir
elixir_backend/_build/dev/lib/castore/ebin/: castore.app
elixir_backend/_build/dev/lib/dns_cluster/.mix/: compile.elixir
elixir_backend/_build/dev/lib/dns_cluster/ebin/: dns_cluster.app
elixir_backend/_build/dev/lib/expo/.mix/: compile.elixir  compile.erlang
elixir_backend/_build/dev/lib/file_system/.mix/: compile.elixir
elixir_backend/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir_backend/lib/: project_elixir_rust_lua_web.ex
elixir_backend/lib/project_elixir_rust_lua/: application.ex  game_channel.ex  rust_nif.ex
elixir_backend/lib/project_elixir_rust_lua_web/: core_components.ex  endpoint.ex  gettext.ex  layouts.ex  router.ex  telemetry.ex  user_socket.ex
elixir_backend/lib/project_elixir_rust_lua_web/controllers/: page_controller.ex
elixir_backend/lib/project_elixir_rust_lua_web/layouts/: app.html.heex  root.html.heex
elixir_backend/lib/project_elixir_rust_lua_web/views/: error_helpers.ex  error_html.ex  error_json.ex  page_html.ex
elixir_backend/lib/project_elixir_rust_lua_web/views/error_html/: 404.html.heex  500.html.heex
elixir_backend/lib/project_elixir_rust_lua_web/views/page_html/: home.html.heex
elixir_backend/priv/static/js/: socket.js
lua_scripts/: movement_rules.lua
rust_engine/: Cargo.toml
rust_engine/src/: lib.rs  lua_engine.rs  physics.rs
(+93 files in other folders)
